แก้log กับ สภิติ
